objects/LLC_BI__Budget__c.object
<CustomObject>
    <description>The budget parent object.</description>
    <fields>
        <fullName>LLC_BI__Budget_Template_Id__c</fullName>
        <description>A reference to the budget template that was used to create the budget.</description>
        <label>Budget Template Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Budget_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The budget template that was used to create this budget.</description>
        <label>Budget Template</label>
        <referenceTo>LLC_BI__Budget__c</referenceTo>
        <relationshipLabel>Budget Templates</relationshipLabel>
        <relationshipName>Budget_Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Description__c</fullName>
        <description>A note about the budget.</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Initially_Editable__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Enables initial edit mode for newly created budgets.</description>
        <label>Is Initially Editable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Template__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to identify budget templates.</description>
        <label>Is Template</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Pending_Amount__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>The amount of the total budgeted amount that has been requested and is pending approval.</description>
        <label>Pending Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Percent_Allocated__c</fullName>
        <description>The total percentage of the budget that has been allocated.</description>
        <formula>LLC_BI__Total_Allocated__c  /  LLC_BI__Total_Budget_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Percent Allocated</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Percent_Disbursed__c</fullName>
        <description>The percentage of the total budget amount that has been disbursed.</description>
        <formula>LLC_BI__Total_Disbursed_Amount__c  /  LLC_BI__Total_Budget_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Percent Disbursed</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Percent_Hard_Costs__c</fullName>
        <description>The system automatically populates this field to calculate the percentage of the total budget amount categorized as hard costs.</description>
        <formula>LLC_BI__Total_Hard_Costs__c  /  LLC_BI__Total_Budget_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Percent Hard Costs</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Percent_Other_Costs__c</fullName>
        <description>The system automatically populates this field to calculate the percentage of the total budget amount not categorized as hard or soft costs.</description>
        <formula>LLC_BI__Total_Other_Costs__c  /  LLC_BI__Total_Budget_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Percent Other Costs</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Percent_Remaining_Disbursement__c</fullName>
        <description>Percentage of the total budget amount that is available to disburse.</description>
        <formula>LLC_BI__Remaining_Disbursement__c  /  LLC_BI__Total_Budget_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Percent Remaining Disbursement</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Percent_Remaining__c</fullName>
        <description>The total percentage of the budget that remains.</description>
        <formula>LLC_BI__Total_Remaining__c  /  LLC_BI__Total_Budget_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Percent Remaining</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Percent_Soft_Costs__c</fullName>
        <description>The system automatically populates this field to calculate the percentage of the total budget amount categorized as soft costs.</description>
        <formula>LLC_BI__Total_Soft_Costs__c  /  LLC_BI__Total_Budget_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Percent Soft Costs</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Remaining_Disbursement__c</fullName>
        <description>The remaining amount that can be disbursed.</description>
        <formula>LLC_BI__Total_Budget_Amount__c  -  LLC_BI__Total_Disbursed_Amount__c - LLC_BI__Pending_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remaining Disbursement</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Total_Allocated__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>The total allocated is the sum of all line item amounts for the budget.</description>
        <label>Total Allocated</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Total_Budget_Amount__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>The total amount for the overall budget.</description>
        <label>Total Budget Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Total_Disbursed_Amount__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>The total amount that has been disbursed for this budget.</description>
        <label>Total Disbursed Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Total_Hard_Costs__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>The system automatically populates this field to sum up the total amount of hard costs.</description>
        <label>Total Hard Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Total_Other_Costs__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>The system automatically populates this field to sum up the total amount of cost not specified as hard or soft costs.</description>
        <label>Total Other Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Total_Remaining__c</fullName>
        <description>The total amount of the budget that remains.</description>
        <formula>LLC_BI__Total_Budget_Amount__c  -  LLC_BI__Total_Allocated__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Total_Soft_Costs__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>The system automatically populates this field to sum up the total amount of soft costs.</description>
        <label>Total Soft Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__lookupKey__c</fullName>
        <description>The field is optional. If populated the value must be unique across all the records of this type. The field typically contains an external identifier that is used to associate the record with its matching record in an external system. The field can also be used to efficiently associate related records, when importing data into nCino, without the need to know the internal ID for the record. For more information, refer to https://developer.salesforce.com/docs/atlas.en-us.apexcode.meta/apexcode/langCon_apex_dml_nested_object.htm.</description>
        <externalId>true</externalId>
        <label>lookupKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Budget</label>
    <listViews>
        <fullName>CLA_Queue_Budget</fullName>
        <filterScope>Queue</filterScope>
        <label>CLA Queue</label>
        <queue>CLA_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>LLC_BI__All</fullName>
        <columns>NAME</columns>
        <columns>LLC_BI__Is_Template__c</columns>
        <columns>LLC_BI__Description__c</columns>
        <columns>LLC_BI__Total_Budget_Amount__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Budget Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Budgets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>